Fixed display bug on Firefox.

--- a/FreshFace/FreshFace/Content/app.css
+++ b/FreshFace/FreshFace/Content/app.css
@@ -87,7 +87,6 @@ body
 {
     padding-top: 0px;
     margin-right: 20px;
-    display: block;
     width: 120px;
 }
 
